test/class/valid/oneField.wacc
begin
  class c is
    int x;
    init() is skip; x = 1 end
  end
  
 println 1
end
